moving overflow fixed

--- a/web/styles/additional-styles/utils.scss
+++ b/web/styles/additional-styles/utils.scss
@@ -26,6 +26,8 @@
 
   body {
     background-color: v.$light;
+    overflow-x: hidden;
+    // overflow: hidden;
   }
 }
 
